--- a/src/makefile
+++ b/src/makefile
@@ -1,10 +1,12 @@
 all: prog
-prog: grammaire.tab.o lex.yy.o
+prog: translate.o grammaire.tab.o lex.yy.o
 	gcc -o $@ $^ -lfl
 grammaire.tab.o: grammaire.tab.c grammaire.tab.h
 	gcc -o $@ -c grammaire.tab.c
-grammaire.tab.c grammaire.tab.h: grammaire.y
+grammaire.tab.c grammaire.tab.h: grammaire.y 
 	bison grammaire.y --defines=grammaire.tab.h
+translate.o: translate.h translate.c
+	gcc -o $@ -c translate.c
 lex.yy.o: lex.yy.c
 	gcc -o $@ -c lex.yy.c
 lex.yy.c: annalyseur_lexical.l grammaire.tab.h
