--- a/src_ts/makefile
+++ b/src_ts/makefile
@@ -1,5 +1,5 @@
 all: prog
-prog: grammaire.tab.o lex.yy.o tableSymboles.o
+prog: grammaire.tab.o lex.yy.o tableSymboles.o tableSymbolesSecondaires.o
 	gcc -o $@ $^ -lfl
 grammaire.tab.o: grammaire.tab.c grammaire.tab.h 
 	gcc -o $@ -c grammaire.tab.c
@@ -7,6 +7,8 @@ grammaire.tab.c grammaire.tab.h: grammaire.y
 	bison grammaire.y --defines=grammaire.tab.h
 tableSymboles.o: tableSymboles.h tableSymboles.c
 	gcc -o $@ -c tableSymboles.c
+tableSymbolesSecondaires.o: tableSymbolesSecondaires.h tableSymbolesSecondaires.c
+	gcc -o $@ -c tableSymbolesSecondaires.c	
 lex.yy.o: lex.yy.c
 	gcc -o $@ -c lex.yy.c
 lex.yy.c: annalyseur_lexical.l grammaire.tab.h
