Refactor + modif makefile.

--- a/src_final/makefile
+++ b/src_final/makefile
@@ -16,4 +16,4 @@ lex.yy.o: lex.yy.c
 lex.yy.c: annalyseur_lexical.l grammaire.tab.h
 	flex annalyseur_lexical.l
 clean:
-	rm programmeTraduction *.o
+	rm programmeTraduction *.o lex.yy.c grammaire.tab.c grammaire.tab.h
